<resources>
    <string name="app_name" translatable="false">Cricket</string>
    <string name="tab_1">Matches</string>
    <string name="tab_2">Players</string>
    <string name="tab_3">Countries</string>
    <string name="current_matches">Current matches</string>
    <string name="list_of_all_players">List of all players</string>
    <string name="list_of_all_countries">List of all countries</string>
    <string name="shadab_khan" translatable="false">Shadab Khan</string>
    <string name="country">Country:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="role">Role:</string>
    <string name="bowling_style">Bowling style:</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="batting_style">Batting style:</string>
    <string name="pakistan" translatable="false">Pakistan</string>
    <string name="_4th_of_october_1998">4th of October 1998</string>
    <string name="mianwali_pakistan" translatable="false">Mianwali, Pakistan</string>
    <string name="allrounder" translatable="false">Allrounder</string>
    <string name="right_arm_legbreak" translatable="false">Right-arm legbreak</string>
    <string name="right_handed_bat">Right handed bat</string>
    <string name="back">Back</string>
    <string name="add_fav">Add to favourites</string>
    <string name="favourites">Favourites</string>
    <string name="type_match" translatable="false">Type match:</string>
    <string name="date_and_time">Date and time:</string>
    <string name="venue">Venue:</string>
    <string name="logo_team_1" translatable="false">Logo team 1</string>
    <string name="logo_team_2" translatable="false">Logo team 2</string>
    <string name="captain">Captains</string>
    <string name="test_match" translatable="false">Test match:</string>
    <string name="odi" translatable="false">ODI:</string>
    <string name="t20" translatable="false">T20:</string>
    <string name="first_matches">First matches</string>
    <string name="already_in_fav">You are already in favourites page</string>
    <string name="remove_favourite">Remove favourite</string>

</resources>